# python-templatepackage

./: .gitignore  .gitmodules  CONTRIBUTING.rst  LICENSE  README.rst  cookiecutter.json  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  reference.rst
docs/contributing/: testing.rst
docs/tutorials/: tutorials.rst
examples/: __init__.py
src/: __init__.py
src/templatepackage/: __init__.py  header.py
tests/: .ruff_tests.toml  __init__.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt
{{cookiecutter.project_name}}/docs/python-styleguide/: LICENSE.rst  README.rst  code_file_layout.md  documentation.md  examples.md  module_tutorials.md  package_tutorials.md  performance_tests.md  project_structure.md  project_tools.md  semantics.md  syntax.md  unit_tests.md
{{cookiecutter.project_name}}/examples/: __init__.py
{{cookiecutter.project_name}}/src/: __init__.py
{{cookiecutter.project_name}}/src/{{ cookiecutter.package_import_name }}/: __init__.py  header.py
{{cookiecutter.project_name}}/src/{{ cookiecutter.package_import_name }}/testsuite/: __init__.py
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py
{{cookiecutter.project_name}}/tutorials/: .ruff_tutorials.toml
